--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ doc/api/
 
 # dotenv environment variables file
 .env*
-
+# Ignore iOS Info.plist file
+ios/Runner/Info.plist
 # Avoid committing generated Javascript files:
 *.dart.js
 *.info.json      # Produced by the --dump-info flag.
