--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,14 @@ environment:
   sdk: '>=3.4.1 <4.0.0'
 
 dependencies:
+  firebase_auth: ^5.1.0
+  firebase_core: ^3.1.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
+  flutter_svg: ^2.0.10+1
+  go_router: ^14.2.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +23,24 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/
+    - assets/icons/
+    - assets/images/
+    - assets/images/onboarding_images/
+    - assets/logos/
+
+  fonts:
+    - family: ClashGrotesk
+      fonts:
+        - asset: assets/fonts/ClashGrotesk-Light.otf
+        #   style: light
+        # - asset: assets/fonts/ClashGrotesk-Extralight.otf
+        #   style: extralight
+        # - asset: assets/fonts/ClashGrotesk-Regular.otf
+        #   style: regular
+        # - asset: assets/fonts/ClashGrotesk-Medium.otf
+        #   style: medium
+        # - asset: assets/fonts/ClashGrotesk-Semibold.otf
+        #   style: semibold
