--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_svg: ^2.0.10+1
   go_router: ^14.2.0
+  pinput: ^5.0.0
   url_launcher: ^6.3.0
 
 dev_dependencies:
@@ -31,16 +32,22 @@ flutter:
     - assets/images/onboarding_images/
     - assets/logos/
 
-  fonts:
-    - family: ClashGrotesk
-      fonts:
-        - asset: assets/fonts/ClashGrotesk-Light.otf
-        #   style: light
-        # - asset: assets/fonts/ClashGrotesk-Extralight.otf
-        #   style: extralight
-        # - asset: assets/fonts/ClashGrotesk-Regular.otf
-        #   style: regular
-        # - asset: assets/fonts/ClashGrotesk-Medium.otf
-        #   style: medium
-        # - asset: assets/fonts/ClashGrotesk-Semibold.otf
-        #   style: semibold
+fonts:
+  - family: ClashGrotesk
+    fonts:
+      - asset: assets/fonts/ClashGrotesk-Light.otf
+        weight: 300
+        style: normal
+      - asset: assets/fonts/ClashGrotesk-Extralight.otf
+        weight: 200
+        style: normal
+      - asset: assets/fonts/ClashGrotesk-Regular.otf
+        weight: 400
+        style: normal
+      - asset: assets/fonts/ClashGrotesk-Medium.otf
+        weight: 500
+        style: medium
+      - asset: assets/fonts/ClashGrotesk-Semibold.otf
+        weight: 600
+        style: normal
+
